--- a/js/readme
+++ b/js/readme
@@ -1,3 +1,3 @@
 so once copy or download the code,
-the js code is already linked to your html page 
+The js code is already linked to your html page 
 so all you need to do is uncomment the neccessary and needed block of code to see its results on your html page or web browser console
